# egocentric-work-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: phase1-manual.html
docs/superpowers/plans/: 2026-06-09-zero-shot-action-segmentation.md  2026-06-10-ollo-tools-gemini.md
docs/superpowers/specs/: 2026-06-09-frontend-web-ui-design.md  2026-06-09-ollo-benchmark-egocentric-work-analysis-design.md  2026-06-10-ollo-tools-gemini-work-analysis-design.md
scripts/: run_evaluate.py  run_pipeline.py
src/: schemas.py
src/evaluate/: compare.py  metrics.py
src/pipeline/: aggregate.py  embed.py  ingest.py  label_gemini.py  label_vlm_single.py  label_zeroshot.py  parse_reference.py  presegment.py  propose_labels.py  report.py
src/web/: app.py  ids.py  jobs.py  routes.py  video_stream.py
src/web/static/: app.css
src/web/templates/: _label_form.html  _status_done.html  _status_error.html  _status_running.html  _timeline.html  index.html
tests/: conftest.py  test_integration.py  test_schemas.py
tests/evaluate/: test_compare.py  test_metrics.py
tests/pipeline/: test_aggregate.py  test_embed.py  test_ingest.py  test_label_gemini.py  test_label_vlm_single.py  test_label_zeroshot.py  test_parse_reference.py  test_presegment.py  test_propose_labels.py  test_report.py
tests/web/: test_ids.py  test_jobs.py  test_routes.py  test_video_stream.py
