[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egocentric-work-analysis"
version = "0.1.0"
description = "Zero-shot action segmentation for first-person factory line videos"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "torch>=2.1,<3.0",
    "open-clip-torch>=2.24,<3.0",
    "ruptures>=1.1",
    "google-genai>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]
